# kiro-gateway

./: .clabot  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLA.md  CLAUDE.md  COMPLIANCE.md  CONTRIBUTING.md  Dockerfile  README.md  README_ACP.md  cliff.toml  credentials.json.example  docker-compose.yml  main.py  main_acp.py  pyproject.toml  pytest.ini  requirements.txt
.github/: FUNDING.yml  labels.yml
.github/workflows/: ci.yml  docker-release.yml  docker.yml  labels.yml  needs-info.yml  release.yml  triage.yml
ai-harness-integration/: kilocode-anthropic-shim.json  openclaw-anthropic-shim.json
docker/: kiro-stub.sh
docs/en/: README.md
docs/es/: README.md
docs/id/: README.md
docs/ja/: README.md
docs/ko/: README.md
docs/pt/: README.md
docs/ru/: ARCHITECTURE.md  README.md
docs/zh/: README.md
examples/clients/: claude-code-anthropic.json  hermes-agent-openai.yaml  kilocode-anthropic.json  kilocode-openai.json  oh-my-pi-anthropic.yaml  oh-my-pi-openai.yaml  openclaw-anthropic.json  openclaw-openai.json  opencode-openai.json
kiro/: __init__.py  account_errors.py  account_manager.py  acp_client.py  acp_models.py  acp_openai_bridge.py  acp_session_manager.py  auth.py  cache.py  capability_executor.py  compliance.py  config.py  converters_anthropic.py  converters_core.py  converters_openai.py  debug_logger.py  debug_middleware.py  error_mapping.py  exceptions.py  http_client.py  kiro_errors.py  mcp_tools.py  model_resolver.py  model_validation.py  models_anthropic.py  models_openai.py  multimodal.py  network_errors.py  output_limits.py  parsers.py  payload_guards.py  routes_acp.py  routes_acp_native.py  routes_anthropic.py  routes_anthropic_acp.py  routes_anthropic_shim.py  routes_openai.py  routes_openai_acp.py  routes_openai_shim.py  shim_service.py  (+8 more)
scripts/: install-service.sh  kiro-gateway.plist  kiro-gateway.service
tests/: README.md  conftest.py  test_converters_anthropic.py  test_converters_openai.py  test_model_resolver.py  test_payload_guards.py  test_streaming_anthropic.py  test_streaming_openai.py  test_truncation.py
tests/integration/: test_account_system_flow.py  test_full_flow.py
tests/unit/: test_account_errors.py  test_account_manager.py  test_acp_client.py  test_acp_compliance.py  test_acp_models.py  test_auth_manager.py  test_capability_executor.py  test_compliance.py  test_config.py  test_error_mapping.py  test_exceptions.py  test_http_client.py  test_main_cli.py  test_main_lifespan.py  test_model_validation.py  test_multimodal.py  test_output_limits.py  test_routes_acp.py  test_routes_anthropic.py  test_routes_anthropic_shim.py  test_routes_openai.py  test_routes_openai_shim.py  test_shim_service.py  test_tokenizer.py  test_workspace.py
