[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "kiro-gateway"
dynamic = ["version"]
description = "OpenAI & Anthropic-compatible API gateway for Kiro (single-account, compliance-mode)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
    "pydantic>=2.7",
    "loguru>=0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
    "httpx>=0.27",
    "loguru>=0.7",
    "ruff>=0.4",
    "mypy>=1.10",
    "hatch-vcs",
]

# ---------------------------------------------------------------------------
# hatch-vcs: derive package version from git tags (e.g. v1.2.0 -> "1.2.0").
# Running `pip install -e .` or `pip install .` in a git repo with tags
# will set the installed package version automatically.
# Outside of a git repo (e.g. Docker build from sdist), hatch-vcs writes
# the resolved version into kiro/_version.py at build time.
# ---------------------------------------------------------------------------
[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
version_scheme = "no-guess-dev"

# ---------------------------------------------------------------------------
# Hatchling build config
# The project is called "kiro-gateway" but the importable package lives in
# the "kiro/" directory.
# ---------------------------------------------------------------------------
[tool.hatch.build.targets.wheel]
packages = ["kiro"]

[tool.hatch.build.targets.sdist]
include = [
    "kiro/",
    "main.py",
    "pyproject.toml",
    "README.md",
    "LICENSE",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
